# aws-lambda-rust-template

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  template.yaml
src/: handlers.rs  main.rs  main.rs.template
src/handlers/: mod.rs  test.rs
