[package]
name = "bootstrap" # must be named bootstrap to work with Lambda
version = "0.1.0"
authors = ["Respond Flow <dev@respondflow.com>"]
edition = "2018"

[dependencies]
serde = {version = "1.0.118", features = ["derive"]}
serde_json = "1.0.60"
serde_derive = "1.0.118"

simple-error = "0.2.2"
lambda_runtime = "0.2.1"

[build-dependencies]
yaml-rust = "0.4.4"
